clusters/apps/env/production/soho/zigbee2mqtt/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zigbee2mqtt
spec:
  hosts:
    - 'zigbee.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: zigbee2mqtt.soho.svc.cluster.local
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zigbee2mqtt-codeserver
spec:
  hosts:
    - 'zigbee-config.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 12321
            host: zigbee2mqtt-codeserver.soho.svc.cluster.local
          weight: 100
